--- a/project/index.html
+++ b/project/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/register" method="post">
+    <form action="/signup" method="post">
         이메일 <input type="email" name="email"><Br><Br>
         비밀번호<input type="password" name="pwd"><Br><Br>
         비밀번호확인<input type="password" name="pwd2"><Br><Br>
