--- a/whoever/public/index.html
+++ b/whoever/public/index.html
@@ -18,9 +18,9 @@
     <script defer src="/__/firebase/9.6.2/firebase-database-compat.js"></script>
     <script defer src="/__/firebase/9.6.2/firebase-firestore-compat.js"></script>
     <script defer src="/__/firebase/9.6.2/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/9.6.2/firebase-messaging-compat.js"></script> -->
+    <script defer src="/__/firebase/9.6.2/firebase-messaging-compat.js"></script>
     <script defer src="/__/firebase/9.6.2/firebase-storage-compat.js"></script>
-   <!-- <script defer src="/__/firebase/9.6.2/firebase-analytics-compat.js"></script>
+   <script defer src="/__/firebase/9.6.2/firebase-analytics-compat.js"></script>
     <script defer src="/__/firebase/9.6.2/firebase-remote-config-compat.js"></script>
     <script defer src="/__/firebase/9.6.2/firebase-performance-compat.js"></script>
     <script defer src="/__/firebase/init.js?useEmulator=true"></script> -->
